# Constraints-in-3D-Pose-Estimation

./: .gitignore  CMakeLists.txt  Data.ods  README.md  Terminal_output  benchmark_scrip_1.sh  benchmark_scrip_2.sh  correction_accepted.txt  correction_rejected.txt  extract_file.sh
data/: geometric2.txt
headers/: Benchmark.hpp  Benchmark_Sixd.hpp  Benchmark_Tejani.hpp  Correspondence.hpp  PosePrior.hpp  Ransac.hpp  Timer.hpp  correspondence_rejection_geometric.h  correspondence_rejection_poly.h  includes.h  ransac.h  ransac.hpp  ransac_impl.hpp  scoped_timer.h  yml_loader.hpp
results/: Data.ods  pose_priors_benchmark.txt  ransac_benchmark.txt
results/test_data/: 0.7 Both 0.txt  0.7 Both 6.txt  0.7 Both 7.txt  0.7 Both 9.txt  0.7 Dissimilarity 1.txt  0.7 Dissimilarity 2.txt  0.7 Dissimilarity 4.txt  0.7 Dissimilarity 5.txt  0.7 Dissimilarity 7.txt  0.7 Dissimilarity 8.txt  0.7 Dissimilarity 9.txt  0.8 Both 0.txt  0.8 Both 2.txt  0.8 Both 5.txt  0.8 Both 7.txt  0.8 Both 8.txt  0.8 Both 9.txt  0.8 Dissimilarity 2.txt  0.8 Dissimilarity 3.txt  0.8 Dissimilarity 5.txt  (+32 more)
scripts/: benchmark_script_1.sh  benchmark_script_2.sh  benchmark_tejani.sh  call_script.sh  data_processing.sh  extract_dataset.sh  extract_file.sh  run.sh
src/: Benchmark.cpp  Benchmark_Sixd.cpp  Benchmark_Tajani.cpp  Correspondence.cpp  PosePrior.cpp  Ransac.cpp  Timer.cpp  main.cpp  ransac.cpp  yml_loader.cpp
test_data/: 0.7 Both 0.txt  0.7 Both 1.txt  0.7 Both 2.txt  0.7 Both 3.txt  0.7 Both 4.txt  0.7 Both 5.txt  0.7 Both 6.txt  0.7 Both 7.txt  0.7 Both 8.txt  0.7 Both 9.txt  0.7 Dissimilarity 0.txt  0.7 Dissimilarity 1.txt  0.7 Dissimilarity 2.txt  0.7 Dissimilarity 3.txt  0.7 Dissimilarity 4.txt  0.7 Dissimilarity 5.txt  0.7 Dissimilarity 6.txt  0.7 Dissimilarity 7.txt  0.7 Dissimilarity 8.txt  0.7 Dissimilarity 9.txt  0.8 Both 0.txt  0.8 Both 1.txt  0.8 Both 2.txt  0.8 Both 3.txt  0.8 Both 4.txt  0.8 Both 5.txt  0.8 Both 6.txt  0.8 Both 7.txt  0.8 Both 8.txt  0.8 Both 9.txt  0.8 Dissimilarity 0.txt  0.8 Dissimilarity 1.txt  0.8 Dissimilarity 2.txt  0.8 Dissimilarity 3.txt  0.8 Dissimilarity 4.txt  0.8 Dissimilarity 5.txt  0.8 Dissimilarity 6.txt  0.8 Dissimilarity 7.txt  0.8 Dissimilarity 8.txt  0.8 Dissimilarity 9.txt  (+80 more)
(+39 files in other folders)
